--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
-@import url("#https://basehold.it/24");
+@import url("https://basehold.it/25");
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -11,83 +11,6 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 /* Begin site styles below */
 
-html {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 1.125em;
-  line-height: 1.25em;
-  padding: 1.25em;
-  background: #93a3a2;
-}
-h1 {
-  text-align: center;
-  font-size: 1.5em;
-  line-height: 1.25em;
-  padding-bottom: 0.6875em;
-}
-h2 {
-  text-align: center;
-  font-size: 1.125em;
-  line-height: 1.1125em;
-  padding-bottom: 0.5em;
-}
-.nav a {
-  display: block;
-  padding: 0.6666em;
-  text-decoration: none;
-  background: #e78b8b;
-  color: #000000;
-}
-.nav a:hover {
-  background: #b36161;
-}
-figure img {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  float: top;
-  width: 70%;
-}
-figcaption {
-  text-align: center;
-}
-main ul li {
-  font-size: 1em;
-  margin-left: 1em;
-  list-style-type: disc;
-}
-main ul li li {
-  font-size: 1em;
-  margin-left: 1em;
-  list-style-type: circle;
-}
-@media screen and (min-width: 67.5em) {
-  html {
-    padding: 0.75em 5%;
-  }
-  .nav a {
-    font-size: 0.75em;
-  }
-  h2 {
-    padding-top: 0.6em;
-  }
-}
-@media screen and (min-width: 45em) {
-  html {
-    padding: 2.125em 15% ;
-  }
-  h2 {
-    padding-top: 3.6em;
-  }
-  .nav li {
-    float: left;
-    width: 33.3333333333%;
-    text-align: center;
-  }
-  .nav a {
-    font-size: 1.125em;
-  }
-}
+html{
 
-footer {
-  text-align: center;
 }
