--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
-@import url("https://basehold.it/25");
+@import url("https://basehold.it/24");
 
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -12,9 +12,17 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 /* Begin site styles below */
 
 html {
-  font-family: 'Noto Sans JP', sans-serif;
-  font-size: 1.5em; /*using a 25px font*/
+  font-family: 'Noto Sans JP', Arial, Helvetica, sans-serif;
+  font-size: 1.5em; /*using a 24px font*/
   line-height: 1.25em;
   padding: inherit;
-  background: #93a3a2;
+  background: #6699CC;
+  text-align: left;
+}
+h1 {
+  text-align: center;
+  font-size: 1.75em;
+  line-height: 2em;
+  background-color: #FFFFFF;
+  margin: .5em;
 }
