--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -26,3 +26,8 @@ h1 {
   background-color: #FFFFFF;
   margin: .5em;
 }
+h2 {
+  text-align: center;
+  font-size: 1.5em;
+  padding-bottom: .5em;
+}
