--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -31,3 +31,13 @@ h2 {
   font-size: 1.5em;
   padding-bottom: .5em;
 }
+main ul li {
+  font-size: 1em;
+  list-style-type: disc;
+  margin-left: 1em;
+}
+main ul li li {
+  font-size: 1em;
+  list-style-type: circle;
+  margin-left: 1em;
+}
