--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -41,3 +41,13 @@ main ul li li {
   list-style-type: circle;
   margin-left: 1em;
 }
+figure img{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 50%
+  height: 50;
+}
+figcaption{
+  text-align: center;
+}
