--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -25,6 +25,7 @@ h1 {
   line-height: 2em;
   background-color: #FFFFFF;
   margin: .5em;
+  border-radius: 100px 100px 100px 100px;
 }
 h2 {
   text-align: center;
@@ -50,4 +51,22 @@ figure img{
 }
 figcaption{
   text-align: center;
+}
+nav{
+  padding: .5em;
+}
+nav a{
+  display: block;
+  padding: .5em;
+  text-decoration: none;
+  background: #C66262;
+}
+nav a:hover{
+  background: #C7B2B2;
+}
+.roundRigth{
+  border-radius: 0 50px 50px 0;
+}
+.roundLeft{
+  border-radius: 50px 0 0 50px;
 }
