--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -70,3 +70,9 @@ nav a:hover{
 .roundLeft{
   border-radius: 50px 0 0 50px;
 }
+footer{
+  text-align: center;
+}
+@media screen amd (min-width 70em){
+
+}
