--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -46,7 +46,7 @@ figure img{
   margin-left: auto;
   margin-right: auto;
   display: block;
-  width: 50%
+  width: 50%;
   height: 50;
 }
 figcaption{
